# wmonitor

./: .gitignore  Cargo.toml  README.md  build.bat  build.sh  cfg.toml  rustfmt.toml  typos.toml
.githooks/: pre-push
.github/workflows/: build_and_release.yaml  cargo_miri.yaml  ci.yaml
db/migrations/: 20250901093538_init.down.sql  20250901093538_init.up.sql
scripts/: setup.bat  setup.sh
src/: app.rs  bot.rs  check.rs  config.rs  core.rs  lib.rs  main.rs  net.rs  repos.rs
src/bot/: commands.rs  mod.rs  notification.rs
src/bot/commands/: admin.rs  chunk.rs  fief.rs  mod.rs  user.rs
src/check/: algorithms.rs  checker.rs  events.rs  mod.rs
src/checker/: algorithms.rs  checker.rs  mod.rs
src/commands/: admin.rs  chunk.rs  common.rs  fief.rs  mod.rs  user.rs
src/core/: config.rs  lock.rs  log.rs  mod.rs  net.rs
src/entities/: chunk.rs  chunk_statu.rs  event.rs  fief.rs  fief_chunk.rs  fief_member.rs  member.rs  mod.rs  user.rs
src/repos/: chunk.rs  event.rs  fief.rs  mod.rs  repos.rs  sqlx_repos.rs  user.rs
src/repos/sqlx/: chunk.rs  event.rs  fief.rs  mod.rs  user.rs
src/repos/sqlx_repos/: chunk.rs  fief.rs  user.rs
src/utils/: cfg.rs  db.rs  img.rs  mod.rs
tests/: main.rs  net.rs  test_checker.rs  test_net.rs
tests/checker/: mod.rs
tests/test_sqlx_repos/: chunk.rs  event.rs  fief.rs  mod.rs  test_chunk.rs  test_fief.rs  test_user.rs  user.rs
