[package]
name = "wmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
image = "0.25"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serenity = "0.12"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "chrono", "json"] }
tokio = { version = "1.47", features = ["full"] }
toml = "0.9"
