[package]
name = "wmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bitflags = "2.9"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
dotenv = "0.15"
image = "0.25"
moka = { version = "0.12", features = ["future"] }
poise = "0.6"
rayon = "1.11"
reqwest = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "chrono",
    "json",
] }
tap = "1.0"
tokio = { version = "1.47", features = ["full"] }
toml_edit = { version = "0.23", features = ["serde"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
typed-builder = "0.21"

[[test]]
name = "wmonitor_tests"
path = "tests/main.rs"
